# ScraperApiService

./: .env  Cargo.toml  Config.toml  README.md  openapi.json  test.py
assets/: 404.html  API_DESCRIPTION.md  API_Description.md  index.html  main.js  style.css
browser_bridge/: Cargo.toml
browser_bridge/src/: error.rs  lib.rs
browser_bridge/src/core/: browser.rs  extension.rs  mod.rs
src/: config.rs  main.rs  utils.rs
src/api/: app.rs  config.rs  database.rs  doc.rs  error.rs  logger.rs  mod.rs  models.rs  routers.rs  states.rs  stream.rs  utils.rs
src/api/routers/: mod.rs  utils.rs
src/models/: api.rs  mod.rs  scraper.rs  validation.rs
src/scraper/: config.rs  error.rs  mod.rs  models.rs  req.rs  reqwests.rs  stream.rs
src/scraper/extractor/: mod.rs  product.rs  selectors.rs
