[package]
name = "scraper_api_service"
version = "0.1.0"
edition = "2021"

[dependencies]
browser_bridge = { path = "./browser_bridge" }
axum = "0.7.9"
tokio = { version = "1.41.1", features = ["full"] }
tokio-stream = "0.1.16"
async-stream = "0.3.6"
sqlx = { version = "0.8.2", features = [ "sqlite", "runtime-tokio" ] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
once_cell = "1.20.2"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
toml = "0.8.19"
chrono = { version = "0.4.38", features = ["std"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
sha1 = "0.10.6"
hex = "0.4.3"
thiserror = "2.0.3"
rand = "0.8.5"
dotenv = "0.15.0"
reqwest = "0.12.9"
axum-macros = "0.4.2"
scraper_dep = { package = "scraper", version = "0.22.0" }
