[package]
name = "scraper_api_service"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.6"
axum = { version = "0.8.1", features = ["ws"] }
axum-macros = "0.4.2"
browser_bridge = { path = "./browser_bridge" }
chrono = { version = "0.4.38", features = ["std"] }
colog = "1.3.0"
dotenv = "0.15.0"
hex = "0.4.3"
log = "0.4.22"
once_cell = "1.20.2"
rand = "0.8.5"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["cookies"] }
scraper_dep = { package = "scraper", version = "0.22.0" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sha1 = "0.10.6"
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio"] }
tempfile = "3.14.0"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
tokio-stream = "0.1.16"
toml = "0.8.19"
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
