[package]
name = "rust_scraper_api"
version = "1.0.0"
edition = "2021"

[dependencies]
async-stream = "0.3"
axum = { version = "0.8", features = ["ws"] }
axum-macros = "0.4"
browser_bridge = { path = "./browser_bridge" }
chrono = { version = "0.4", features = ["std"] }
colog = "1.3"
dotenv = "0.15"
hex = "0.4"
log = "0.4"
rand = "0.8"
regex = "1.11"
reqwest = { version = "0.12", features = ["cookies"] }
scraper_dep = { package = "scraper", version = "0.22.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
tempfile = "3.14.0"
thiserror = "2.0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
toml = "0.8"
tower-http = { version = "0.6", features = ["fs", "trace"] }
uuid = { version = "1", features = ["v4", "fast-rng"] }
indexmap = { version = "2", features = ["serde"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.release.build-override]
opt-level = 3

[profile.release.package."*"]
opt-level = 3
