[package]
name = "browser_bridge"
version = "0.1.0"
edition = "2021"
description = "Browser automation for parsing"
license = "MIT"
authors = ["Nikita55612"]

[lib]
doctest = false

[dependencies]
chromiumoxide = { git = "https://github.com/mattsse/chromiumoxide", features = ["tokio-runtime"], default-features = false, branch = "main"}
tokio = { version = "1.41.1", features = ["full"] }
tokio-stream = "0.1.16"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
once_cell = "1.20.2"
rand = "0.8.5"
thiserror = "2.0.4"
